# corgidude

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flash.sh  openocd.cfg
board/: Cargo.toml
board/src/: def.rs  dvp.rs  fpioa.rs  gpio.rs  gpiohs.rs  lcd.rs  lib.rs  pll_compute.rs  sleep.rs  sysctl.rs  utils.rs
rgb/: Cargo.toml
rgb/src/: main.rs
sdcard/: Cargo.toml
sdcard/src/: init.rs  lcd.rs  main.rs  panic.rs  rtc_source.rs  sdcard.rs  wrapper.rs
stream/: Cargo.toml
stream/src/: init.rs  lcd.rs  main.rs  ov2640.rs  panic.rs
